--- a/source/_posts/jca/04.md
+++ b/source/_posts/jca/04.md
@@ -9,7 +9,7 @@ tags:
 ---
 
 
-[![](http://img2.tuicool.com/3mMjAf.jpg "title")](http://img2.tuicool.com/3mMjAf.jpg)
+![vv](http://img2.tuicool.com/3mMjAf.jpg "title")
 <!-- more -->
 
 >导读：
